--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
         <img class="logo" src="/assets/images/artbydavid logo png.png" alt="artbydavid logo">
     </header>
 
+    <nav>
+        <a href="#">HOME</a>
+        <a href="#">ABOUT</a>
+        <a href="#">SKILLS</a>
+        <a href="#">ACCOMPLISHMENTS</a>
+        <a href="#">CLIENTS</a>
+        <a href="#">GALLERY</a>
+        <a href="#">CONTACT</a>
+    </nav>
+
 
 
 
