Added "About" section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,9 +13,12 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    </head>
+</head>
+
 <body>
-    
+
+<!-- HOME -->
+
     <header>
         <img class="logo" src="/assets/images/artbydavid logo png.png" alt="artbydavid logo">
     </header>
@@ -29,10 +33,24 @@
         <a href="#">CONTACT</a>
     </nav>
 
+<!-- ABOUT -->
+
+
+    <div>
+        <img src="/assets/images/David photo png.png" alt="David Ujo">
+        <h1>David Ujo</h1>
+        <p>Creative Visual Strategist</p>
+        <p>Freelance graphic designer with 9+ years creating logos and brand identities.
+            <br>I craft memorable visuals that help businesses connect with their audience
+            <br>and turn ideas into professional, impactful designs.
+        </p>
+    </div>
+
 
 
 
 
 
 </body>
+
 </html>
