Added SKILLS section

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <!-- ABOUT -->
 
 
-    <div>
+    <div class="profile">
         <img src="/assets/images/David photo png.png" alt="David Ujo">
         <h1>David Ujo</h1>
         <p>Creative Visual Strategist</p>
@@ -45,6 +45,16 @@
             <br>and turn ideas into professional, impactful designs.
         </p>
     </div>
+
+<!-- SKILLS -->   
+
+<section class="skills">
+    <h2>SKILLS</h2>
+    <p>I bring ideas to life using the industry's leading design tools. Here's what's in my creative toolkit:</p>
+    <img src="/assets/images/PS logo.png" alt="Photoshop">
+    <img src="/assets/images/Illustrator logo.png" alt="Illustrator">
+    <img src="/assets/images/Figma logo.png" alt="Figma">
+</section>
 
 
 
