Added ACCOMPLISHMENTS section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-<!-- HOME -->
+    <!-- HOME -->
 
     <header>
         <img class="logo" src="/assets/images/artbydavid logo png.png" alt="artbydavid logo">
@@ -33,7 +33,7 @@
         <a href="#">CONTACT</a>
     </nav>
 
-<!-- ABOUT -->
+    <!-- ABOUT -->
 
 
     <div class="profile">
@@ -46,16 +46,51 @@
         </p>
     </div>
 
-<!-- SKILLS -->   
+    <!-- SKILLS -->
 
-<section class="skills">
-    <h2>SKILLS</h2>
-    <p>I bring ideas to life using the industry's leading design tools. Here's what's in my creative toolkit:</p>
-    <img src="/assets/images/PS logo.png" alt="Photoshop">
-    <img src="/assets/images/Illustrator logo.png" alt="Illustrator">
-    <img src="/assets/images/Figma logo.png" alt="Figma">
-</section>
+    <section class="skills">
+        <h2>SKILLS</h2>
+        <p>I bring ideas to life using the industry's leading design tools. Here's what's in my creative toolkit:</p>
+        <img src="/assets/images/PS logo.png" alt="Photoshop">
+        <img src="/assets/images/Illustrator logo.png" alt="Illustrator">
+        <img src="/assets/images/Figma logo.png" alt="Figma">
+    </section>
 
+    <!-- ACCOMPLISHMENTS -->
+
+    <section class="accomplishments">
+        <h2>ACCOMPLISHMENTS</h2>
+        <p>My design journey across leading brands and creative studios. Here's where I've made an impact.</p>
+        html
+        Copy
+        <table>
+            <tr>
+                <th>Studio/Employer</th>
+                <th>Role</th>
+                <th>Timeline</th>
+            </tr>
+            <tr>
+                <td>Aesthetic Alliance / Kyiv</td>
+                <td>Principal Visual Designer</td>
+                <td>2018 - 2021</td>
+            </tr>
+            <tr>
+                <td>Designory Collective / Kyiv</td>
+                <td>Digital Art Director</td>
+                <td>2016 - 2018</td>
+            </tr>
+            <tr>
+                <td>Ink & Pixels Studio / Kyiv</td>
+                <td>Senior Graphic Artist</td>
+                <td>2014 - 2016</td>
+            </tr>
+            <tr>
+                <td>Type & Image Co. / Kyiv</td>
+                <td>Design Associate</td>
+                <td>2012 - 2014</td>
+            </tr>
+        </table>
+    </section>
 
 
 
