Added CLIENTS section

--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
 
     <section class="accomplishments">
         <h2>ACCOMPLISHMENTS</h2>
-        <p>My design journey across leading brands and creative studios. Here's where I've made an impact.</p>
-        html
-        Copy
+        <p>My design journey across leading brands and creative studios. Here's
+            where I've made an impact.</p>
         <table>
             <tr>
                 <th>Studio/Employer</th>
@@ -91,6 +90,24 @@
             </tr>
         </table>
     </section>
+
+    <!-- CLIENTS -->
+
+    <secton class="clients">
+        <h2>CLIENTS</h2>
+        <p>From startups to established name - these are the brands I#ve brought to life through design:</p>
+        <div>
+            <img src="/assets/images/mass appeal logo copy.png" alt="Mass Appeal">
+            <img src="/assets/images/revolt logo copy.png" alt="Revolt">
+            <img src="/assets/images/Djhektik logo copy.png" alt="Dj Hektik">
+            <img src="/assets/images/yntempire logo copy.png" alt="YNT Empire">
+            <img src="/assets/images/airbove music logo copy.png" alt="Airbove music">
+            <img src="/assets/images/redmoney logo copy.png" alt="Red Money Records">
+            <img src="/assets/images/247 logo copy.png" alt="247 Creatives">
+            <img src="/assets/images/medianet logo copy.png" alt="Medianet">
+            <img src="/assets/images/smarthiphop logo copy.png" alt="Smart Hiphop">
+        </div>
+    </secton>
 
 
 
