--- a/index.html
+++ b/index.html
@@ -109,6 +109,26 @@
         </div>
     </secton>
 
+    <!-- QUOTE -->
+
+    <div class="quote">
+        "Simplicity is the ultimate sophistication"
+        <br>- Leonardo da Vinci
+    </div>
+
+    <!-- CONTACT -->
+
+    <section class="contact">
+        <h2>CONTACT</h2>
+        <form>
+            <input type="text" placeholder="Name">
+            <input type="email" placeholder="E-Mail">
+            <input type="text" placeholder="Number">
+            <textarea rows="4" placeholder="Your message here!"></textarea>
+            <button type="submit">SEND</button>
+        </form>
+    </section>
+
 
 
 
