--- a/index.html
+++ b/index.html
@@ -129,9 +129,14 @@
         </form>
     </section>
 
+    <!-- FOOTER -->
 
-
-
+    <footer>
+        <img src="/assets/images/icons8-instagram-logo-100.png" alt="instagram icon">
+        <img src="/assets/images/icons8-facebook-logo-100.png" alt="facebook icon">
+        <img src="/assets/images/icons8-behance-100.png" alt="instagram icon">
+        <img src="/assets/images/icons8-linkedin-100.png" alt="instagram icon">
+    </footer>
 
 </body>
 
