Made changes in ABOUT section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>artbydavid</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    
+
     <link href="" rel="stylesheet">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon_io/apple-touch-icon.png">
@@ -44,11 +44,8 @@
     <div class="profile">
         <img src="/assets/images/David photo png.png" alt="David Ujo">
         <h1>David Ujo</h1>
-        <p>Creative Visual Strategist</p>
-        <p>Freelance graphic designer with 9+ years creating logos and brand identities.
-            <br>I craft memorable visuals that help businesses connect with their audience
-            <br>and turn ideas into professional, impactful designs.
-        </p>
+        <h2>Creative Visual Strategist</h2>
+        <p>Freelance graphic designer with 9+ years creating logos and brand identities.<br>I craft memorable visuals that help businesses connect with their audience and turn ideas into professional, impactful designs.</p>
     </div>
 
     <!-- SKILLS -->
