--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             where I've made an impact.</p>
         <table>
             <tr>
-                <th class="studio">Studio/Employer</th>
+                <th>Studio/Employer</th>
                 <th>Role</th>
                 <th>Timeline</th>
             </tr>
