Styled QUOTE section

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
         <img src="/assets/images/David photo png.png" alt="David Ujo">
         <h1>David Ujo</h1>
         <h2>Creative Visual Strategist</h2>
-        <p>Freelance graphic designer with 9+ years creating logos and brand identities.<br>I craft memorable visuals that help businesses connect with their audience and turn ideas into professional, impactful designs.</p>
+        <p>Freelance graphic designer with 9+ years creating logos and brand identities.<br>I craft memorable visuals
+            that help businesses connect with their audience and turn ideas into professional, impactful designs.</p>
     </div>
 
     <!-- SKILLS -->
@@ -115,7 +116,7 @@
 
     <div class="quote">
         "Simplicity is the ultimate sophistication"
-        <br>- Leonardo da Vinci
+        <br><span>- Leonardo da Vinci</span>
     </div>
 
     <!-- CONTACT -->
