--- a/index.html
+++ b/index.html
@@ -135,10 +135,26 @@
     <!-- FOOTER -->
 
     <footer>
-        <img src="/assets/images/icons8-instagram-logo-100.png" alt="instagram icon">
-        <img src="/assets/images/icons8-facebook-logo-100.png" alt="facebook icon">
-        <img src="/assets/images/icons8-behance-100.png" alt="instagram icon">
-        <img src="/assets/images/icons8-linkedin-100.png" alt="instagram icon">
+        <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+            aria-label="Visit our Instagram page (opens in a new tab)">
+            <img src="/assets/images/icons8-instagram-logo-100.png" alt="Instagram icon">
+        </a>
+
+        <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+            aria-label="Visit our Facebook page (opens in a new tab)">
+            <img src="/assets/images/icons8-facebook-logo-100.png" alt="Facebook icon">
+        </a>
+
+        <a href="https://www.behance.net/" target="_blank" rel="noopener"
+            aria-label="Visit our Behance portfolio (opens in a new tab)">
+            <img src="/assets/images/icons8-behance-100.png" alt="Behance icon">
+        </a>
+
+        <a href="https://www.linkedin.com/" target="_blank" rel="noopener"
+            aria-label="Visit our LinkedIn profile (opens in a new tab)">
+            <img src="/assets/images/icons8-linkedin-100.png" alt="LinkedIn icon">
+        </a>
+
     </footer>
 
 </body>
