Made changes in NAV

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <link href="" rel="stylesheet">
+    <link rel="stylesheet" href="../art-by-david/assets/css/style.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon_io/favicon-32x32.png">
@@ -29,13 +29,13 @@
     </header>
 
     <nav>
-        <a href="#">HOME</a>
-        <a href="#">ABOUT</a>
-        <a href="#">SKILLS</a>
-        <a href="#">ACCOMPLISHMENTS</a>
-        <a href="#">CLIENTS</a>
-        <a href="#">GALLERY</a>
-        <a href="#">CONTACT</a>
+        <a href="index.html">HOME</a>
+        <a href="index.html">ABOUT</a>
+        <a href="index.html">SKILLS</a>
+        <a href="index.html">ACCOMPLISHMENTS</a>
+        <a href="index.html">CLIENTS</a>
+        <a href="gallery.html">GALLERY</a>
+        <a href="index.html">CONTACT</a>
     </nav>
 
     <!-- ABOUT -->
