--- a/gallery.html
+++ b/gallery.html
@@ -13,6 +13,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
+    <link rel="stylesheet" href="../art-by-david/assets/css/style.css">
+
 </head>
 
 <body>
