some changes made

--- a/gallery.html
+++ b/gallery.html
@@ -6,14 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>artbydavid</title>
-    <link href="" rel="stylesheet">
 
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon_io/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <link rel="stylesheet" href="../art-by-david/assets/css/style.css">
+    <link rel="stylesheet" href="/assets/css/style.css">
 
 </head>
 
@@ -26,13 +25,13 @@
     </header>
 
     <nav>
-        <a href="#">HOME</a>
-        <a href="#">ABOUT</a>
-        <a href="#">SKILLS</a>
-        <a href="#">ACCOMPLISHMENTS</a>
-        <a href="#">CLIENTS</a>
-        <a href="#">GALLERY</a>
-        <a href="#">CONTACT</a>
+        <a href="#home">HOME</a>
+        <a href="#about">ABOUT</a>
+        <a href="#skills">SKILLS</a>
+        <a href="#accomplishments">ACCOMPLISHMENTS</a>
+        <a href="#clients">CLIENTS</a>
+        <a href="#gallery">GALLERY</a>
+        <a href="#contact">CONTACT</a>
     </nav>
 
     <h2>GALLERY</h2>
