--- a/gallery.html
+++ b/gallery.html
@@ -7,12 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>artbydavid</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon_io/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
@@ -21,7 +21,7 @@
     <!-- HOME -->
 
     <header>
-        <img class="logo" src="/assets/images/artbydavid logo png.png" alt="artbydavid logo">
+        <img class="logo" src="assets/images/artbydavid-logo.png" alt="artbydavid logo">
     </header>
 
     <nav>
@@ -35,23 +35,25 @@
     </nav>
 
     <h2>GALLERY</h2>
-    <img src="/assets/images/artwork 1.png" alt="Mass Appeal">
-    <img src="/assets/images/artwork 2.png" alt="Revolt">
-    <img src="/assets/images/artwork 3.png" alt="Dj Hektik">
-    <img src="/assets/images/artwork 4.png" alt="YNT Empire">
-    <img src="/assets/images/artwork 5.png" alt="Airbove music">
-    <img src="/assets/images/artwork 6.png" alt="Red Money Records">
-    <img src="/assets/images/artwork 7.png" alt="247 Creatives">
-    <img src="/assets/images/artwork 8.png" alt="Medianet">
-    <img src="/assets/images/flyer 1.png" alt="flyer design1">
-    <img src="/assets/images/flyer 2.png" alt="flyer design2">
-    <img src="/assets/images/flyer 3.png" alt="flyer design3">
-    <img src="/assets/images/website 1.jpg" alt="web design1">
-    <img src="/assets/images/website 2.jpg" alt="web design2">
-    <img src="/assets/images/website 3.jpg" alt="web design3">
-    <img src="/assets/images/website 4.jpg" alt="web design4">
-    <img src="/assets/images/website 5.jpg" alt="web design5">
-    
+    <div class="gallery-grid">
+        <img src="assets/images/artwork-1.png" alt="Mass Appeal">
+        <img src="assets/images/artwork-2.png" alt="Revolt">
+        <img src="assets/images/artwork-3.png" alt="Dj Hektik">
+        <img src="assets/images/artwork-4.png" alt="YNT Empire">
+        <img src="assets/images/artwork-5.png" alt="Airbove music">
+        <img src="assets/images/artwork-6.png" alt="Red Money Records">
+        <img src="assets/images/artwork-7.png" alt="247 Creatives">
+        <img src="assets/images/artwork-8.png" alt="Medianet">
+        <img src="assets/images/flyer1.png" alt="flyer design1">
+        <img src="assets/images/flyer2.png" alt="flyer design2">
+        <img src="assets/images/flyer3.png" alt="flyer design3">
+        <img src="assets/images/website-1.jpg" alt="web design1">
+        <img src="assets/images/website-2.jpg" alt="web design2">
+        <img src="assets/images/website-3.jpg" alt="web design3">
+        <img src="assets/images/website-4.jpg" alt="web design4">
+        <img src="assets/images/website-5.jpg" alt="web design5">
+    </div>
+
 
 
 
