--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon_io/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon_io/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
     <link rel="stylesheet" href="assets/css/style.css">
@@ -26,7 +26,7 @@
     <!-- HOME -->
 
     <header>
-        <img class="logo" src="/assets/images/artbydavid logo png.png" alt="artbydavid logo">
+        <img class="logo" src="assets/images/artbydavid-logo.png" alt="artbydavidlogo">
     </header>
 
     <nav>
@@ -43,7 +43,7 @@
 
 
     <div id="about" class="profile">
-        <img src="/assets/images/David photo png.png" alt="David Ujo">
+        <img src="assets/images/David-photo.png" alt="David Ujo">
         <h1>David Ujo</h1>
         <h2>Creative Visual Strategist</h2>
         <p>Freelance graphic designer with 9+ years creating logos and brand identities.<br>I craft memorable visuals
@@ -55,9 +55,9 @@
     <section id="skills" class="skills">
         <h2>SKILLS</h2>
         <p>I bring ideas to life using the industry's leading design tools. Here's what's in my creative toolkit:</p>
-        <img src="/assets/images/PS logo.png" alt="Photoshop">
-        <img src="/assets/images/Illustrator logo.png" alt="Illustrator">
-        <img src="/assets/images/Figma logo.png" alt="Figma">
+        <img src="assets/images/PS-logo.png" alt="Photoshop">
+        <img src="assets/images/Illustrator-logo.png" alt="Illustrator">
+        <img src="assets/images/Figma-logo.png" alt="Figma">
     </section>
 
     <!-- ACCOMPLISHMENTS -->
@@ -101,15 +101,15 @@
         <h2>CLIENTS</h2>
         <p>From startups to established name - these are the brands I've brought to life through design:</p>
         <div>
-            <img src="/assets/images/mass appeal logo copy.png" alt="Mass Appeal">
-            <img src="/assets/images/revolt logo copy.png" alt="Revolt">
-            <img src="/assets/images/Djhektik logo copy.png" alt="Dj Hektik">
-            <img src="/assets/images/yntempire logo copy.png" alt="YNT Empire">
-            <img src="/assets/images/airbove music logo copy.png" alt="Airbove music">
-            <img src="/assets/images/redmoney logo copy.png" alt="Red Money Records">
-            <img src="/assets/images/247 logo copy.png" alt="247 Creatives">
-            <img src="/assets/images/medianet logo copy.png" alt="Medianet">
-            <img src="/assets/images/smarthiphop logo copy.png" alt="Smart Hiphop">
+            <img src="assets/images/massappeal-logo.png" alt="Mass Appeal">
+            <img src="assets/images/revolt-logo.png" alt="Revolt">
+            <img src="assets/images/Djhektik-logo.png" alt="Dj Hektik">
+            <img src="assets/images/yntempire-logo.png" alt="YNT Empire">
+            <img src="assets/images/airbove-music-logo.png" alt="Airbove music">
+            <img src="assets/images/redmoney-logo.png" alt="Red Money Records">
+            <img src="assets/images/247-logo.png" alt="247 Creatives">
+            <img src="assets/images/medianet-logo.png" alt="Medianet">
+            <img src="assets/images/smarthiphop-logo.png" alt="Smart Hiphop">
         </div>
     </section>
 
@@ -139,22 +139,22 @@
     <footer>
         <a href="https://www.instagram.com/" target="_blank" rel="noopener"
             aria-label="Visit our Instagram page (opens in a new tab)">
-            <img src="/assets/images/icons8-instagram-logo-100.png" alt="Instagram icon">
+            <img src="assets/images/icons8-instagram-logo-100.png" alt="Instagram icon">
         </a>
 
         <a href="https://www.facebook.com/" target="_blank" rel="noopener"
             aria-label="Visit our Facebook page (opens in a new tab)">
-            <img src="/assets/images/icons8-facebook-logo-100.png" alt="Facebook icon">
+            <img src="assets/images/icons8-facebook-logo-100.png" alt="Facebook icon">
         </a>
 
         <a href="https://www.behance.net/artbydavidujo" target="_blank" rel="noopener"
             aria-label="Visit our Behance portfolio (opens in a new tab)">
-            <img src="/assets/images/icons8-behance-100.png" alt="Behance icon">
+            <img src="assets/images/icons8-behance-100.png" alt="Behance icon">
         </a>
 
         <a href="https://www.linkedin.com/" target="_blank" rel="noopener"
             aria-label="Visit our LinkedIn profile (opens in a new tab)">
-            <img src="/assets/images/icons8-linkedin-100.png" alt="LinkedIn icon">
+            <img src="assets/images/icons8-linkedin-100.png" alt="LinkedIn icon">
         </a>
 
     </footer>
