Still styling GALLERY and making changes

--- a/gallery.html
+++ b/gallery.html
@@ -34,6 +34,8 @@
         <a href="#contact">CONTACT</a>
     </nav>
 
+
+    <section id="gallery" class="gallery">
     <h2>GALLERY</h2>
     <div class="gallery-grid">
         <img src="assets/images/artwork-1.png" alt="Mass Appeal">
@@ -53,6 +55,7 @@
         <img src="assets/images/website-4.jpg" alt="web design4">
         <img src="assets/images/website-5.jpg" alt="web design5">
     </div>
+</section>
 
 
 
