--- a/gallery.html
+++ b/gallery.html
@@ -30,7 +30,7 @@
         <a href="#skills">SKILLS</a>
         <a href="#accomplishments">ACCOMPLISHMENTS</a>
         <a href="#clients">CLIENTS</a>
-        <a href="#gallery">GALLERY</a>
+        <a href="../art-by-david/gallery.html">GALLERY</a>
         <a href="#contact">CONTACT</a>
     </nav>
 
