--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <a href="#skills">SKILLS</a>
         <a href="#accomplishments">ACCOMPLISHMENTS</a>
         <a href="#clients">CLIENTS</a>
-        <a href="#gallery">GALLERY</a>
+        <a href="../art-by-david/gallery.html">GALLERY</a>
         <a href="#contact">CONTACT</a>
     </nav>
 
