--- a/gallery.html
+++ b/gallery.html
@@ -25,7 +25,7 @@
     </header>
 
     <nav>
-        <a href="#home">HOME</a>
+        <a href="index.html">HOME</a>
         <a href="#about">ABOUT</a>
         <a href="#skills">SKILLS</a>
         <a href="#accomplishments">ACCOMPLISHMENTS</a>
