Made changes to Gallery grid

--- a/gallery.html
+++ b/gallery.html
@@ -46,6 +46,10 @@
             <img src="assets/images/artwork-6.png" alt="Red Money Records">
             <img src="assets/images/artwork-7.png" alt="247 Creatives">
             <img src="assets/images/artwork-8.png" alt="Medianet">
+            <img src="assets/images/logo1.png" alt="logodesign1">
+            <img src="assets/images/logo2.png" alt="logodesign2">
+            <img src="assets/images/logo3.png" alt="logodesign3">
+            <img src="assets/images/logo4.png" alt="logodesign4">
             <img src="assets/images/flyer1.png" alt="flyer design1">
             <img src="assets/images/flyer2.png" alt="flyer design2">
             <img src="assets/images/flyer3.png" alt="flyer design3">
