Made changes GALLERY style

--- a/gallery.html
+++ b/gallery.html
@@ -26,13 +26,16 @@
 
     <nav>
         <a href="index.html">HOME</a>
-        <a href="#about">ABOUT</a>
-        <a href="#skills">SKILLS</a>
-        <a href="#accomplishments">ACCOMPLISHMENTS</a>
-        <a href="#clients">CLIENTS</a>
+        <a href="index.html#about">ABOUT</a>
+        <a href="index.html#skills">SKILLS</a>
+        <a href="index.html#accomplishments">ACCOMPLISHMENTS</a>
+        <a href="index.html#clients">CLIENTS</a>
         <a href="gallery.html">GALLERY</a>
-        <a href="#contact">CONTACT</a>
+        <a href="index.html#contact">CONTACT</a>
     </nav>
+
+
+    
 
 
     <section id="gallery" class="gallery">
